<?xml version="1.0"?>
<package format="2">
  <name>fath_pivot_mount_description</name>
  <version>0.1.1</version>
  <description>URDF Macro for adding an adjustable, fath pivot mount used for cameras and other sensors</description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
